<resources>
    <string name="app_name">Carma</string>
    <string name="hello_world">Hello world! Welcome to Carma</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_block">BlockActivity</string>
    <string name="title_activity_list_phone_apps">Phone Apps</string>
    <string name="title_activity_emergency_contact">EmergencyContact</string>
    <string name="title_activity_safe_place">SafePlace</string>
    <string name="title_activity_preference">Settings</string>



    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="safeSpots_summary">Choose where you want to drive to</string>
    <string name="safeSpots">Safe Spot Settings</string>
    <string name="pref_send_report">Driving Mode</string>
    <string name="pref_send_report_summary">For App Debugging </string>
    <string name="blockedApps">Blocked Apps Settings</string>
    <string name="blockedApps_summary">Select which Apps to Block</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>


    <string name="emergencyContacts_summary">Choose your Emergency Contacts</string>
    <string name="emergencyContacts">Emergency Contacts Settings</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">App Settings</string>

    <string-array name="safeSpotArray">
        <item name="1">Restaurants</item>
        <item name="2">Parking Spots</item>
        <item name="3">Gas Stations</item>
        <item name="4">Coffee Shops</item>
    </string-array>

    <string-array name="safeSpotArrayValues">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
    </string-array>
    <string name="title_activity_safe_spot_google_maps">SafeSpotGoogleMaps</string>

</resources>
